# novoed-toolkit

./: .gitignore  ARCHITECTURE.md  NovoEd_Component_Library.jsx  NovoEd_Toolkit_Claude_Project_Instructions.md  README.md  build_vanilla.py  convert-icons.js  course-builder.html  index.html  procurement-infographic.html
_archive/now/: README.md
agent-backend/: .env.example  pyproject.toml  run.py
agent-backend/agent_backend/: __init__.py  bridge.py  config.py  main.py  parse.py  schemas.py  session.py  ui_tools.py
agent-backend/scripts/: ws_smoke.py
app/: .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  vite.config.js  vite.config.ts
app/public/: scorm-sw.js
app/src/: index.css  main.tsx  types.ts
app/src/agent/: AgentChat.tsx  AgentContext.tsx  CourseOutlineProposal.tsx  MaterialsShelf.tsx  toolExecutor.ts  types.ts  useAgentSocket.ts
app/src/brand/: tokens.ts
app/src/components/: BrandSwitch.tsx
app/src/course/: blockTypes.ts  exportLesson.ts  previewBlock.ts  types.ts
app/src/generators/: defaults.ts  registry.ts
app/src/pages/: ComponentLibrary.tsx  CourseBuilder.tsx  CourseStudio.tsx  Dashboard.tsx  InfographicStudio.tsx  ProjectsLibrary.tsx  ScormPlayer.tsx
app/src/scorm/: player.ts  zipBuilder.ts
docs/: DEMO_SCRIPT.md  HANDOFF.md  LEADERSHIP_ONE_PAGER.md  POLISH_BACKLOG.md  RUN.md
dxt/: .gitignore  README.md  build.js  manifest.json
fonts/: README.md
mcp-server/: README.md  catalog.js  package-lock.json  package.json  server.js  smoke.js
scripts/: smoke.py
(+9 files in other folders)
